--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <!doctype html>
 <html>
+  <head>
+    <style>
+      body, html { padding: 0; margin: 0; }
+    </style>
+  </head>
   <body>
     <div id=main></div>
   </body>
